[package]
name = "sudocker"
version = "0.1.0"
authors = ["Quentin J. @0xrawsec"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
regex = "1.3.9"
clap = "2.33.1"